--- a/register.html
+++ b/register.html
@@ -4,44 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
-<body class="bg-gray-50">
-    <div class="min-h-screen flex items-center justify-center">
-        <div class="bg-white p-8 rounded-lg shadow-lg max-w-md w-full">
-            <h1 class="text-3xl font-bold mb-6 text-center">Register</h1>
-            <form id="register-form" class="space-y-4">
-                <div>
-                    <label class="block text-sm font-bold mb-2">Username</label>
-                    <input type="text" name="username" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-600">
-                </div>
-                <div>
-                    <label class="block text-sm font-bold mb-2">Email</label>
-                    <input type="email" name="email" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-600">
-                </div>
-                <div>
-                    <label class="block text-sm font-bold mb-2">Full Name (Optional)</label>
-                    <input type="text" name="fullName" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-600">
-                </div>
-                <div>
-                    <label class="block text-sm font-bold mb-2">Password</label>
-                    <input type="password" name="password" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-600">
-                </div>
-                <button type="submit" class="w-full bg-yellow-600 hover:bg-yellow-700 text-white font-bold py-3 rounded-lg">
-                    Register
-                </button>
-                <p class="text-center text-sm">
-                    Already have an account?
-                    <a href="login.html" class="text-yellow-600 hover:underline">Login</a>
-                </p>
-            </form>
+<body>
+    <div class="page-wrapper">
+        <div class="PageContent">
+            <header class="TopNav">
+                <a href="home.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
+                <a href="contact.html">Contact</a>
+                <div class="IconNav" id="auth-buttons"></div>
+            </header>
 
-            <div id="error-msg" class="mt-4 text-red-600 text-center hidden"></div>
-        </div>
+            <div class="AuthPage">
+                <div class="AuthCard">
+        <h1 class="AuthTitle">Register</h1>
+        <form id="register-form" class="AuthForm">
+          <label for="r-username">Username</label>
+          <input id="r-username" name="username" type="text" required>
+
+          <label for="r-email">Email</label>
+          <input id="r-email" name="email" type="email" required>
+
+          <label for="r-fullName">Full Name (Optional)</label>
+          <input id="r-fullName" name="fullName" type="text">
+
+          <label for="r-password">Password</label>
+          <input id="r-password" name="password" type="password" required>
+
+          <button type="submit" class="AuthButton">Register</button>
+
+          <p class="AuthHelp">Already have an account? <a href="login.html">Login</a></p>
+        </form>
+        <div id="error-msg" class="AuthError" aria-live="polite"></div>
+      </div>
     </div>
 
-    <!-- External JS -->
-    <script src="js/register.js"></script>
+    <script>
+        document.getElementById('register-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const formData = new FormData(e.target);
+            
+            fetch('api/register.php', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({
+                    username: formData.get('username'),
+                    email: formData.get('email'),
+                    password: formData.get('password'),
+                    fullName: formData.get('fullName')
+                })
+            })
+            .then(res => res.json())
+            .then(data => {
+                if (data.success) {
+                    window.location.href = 'home.html';
+                } else {
+                    document.getElementById('error-msg').textContent = data.error;
+                    document.getElementById('error-msg').classList.remove('hidden');
+                }
+            });
+        });
+        </script>
+
+        </div>
+
+        <div id="site-footer">
+            <footer class="footer">
+                <div class="FooterIconsContainer">
+                    <img src="assets/images/FacebookIcon.png" class="FooterIcons" alt="facebook">
+                    <img src="assets/images/InstagramIcon.png" class="FooterIcons" alt="instagram">
+                    <img src="assets/images/YoutubeIcon.png" class="FooterIcons" alt="youtube">
+                </div>
+                <p class="ContactTitle">© 2025 Luxury Jewelry Store</p>
+            </footer>
+        </div>
+
+    </div>
+    <script src="js/index.js" defer></script>
 </body>
 </html>
-
